<resources>
    <string name="app_name">Sprint6Telefonos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txNombreFono" />
    <string name="txPrecio" />
    <string name="BotonEnviarEmail" />
    <string name="NombreDetalle" />
    <string name="PrecioDetalle" />
    <string name="Descripcion" />
    <string name="PrecioFinal" />
    <string name="precioFinal" />
    <string name="precioFinall" />
    <string name="credito" />
    <string name="nombreDetalle" />
    <string name="precioDetalle" />
    <string name="descripcion" />
    <string name="lo_quiero_enviar_email">Lo quiero Enviar Email</string>
    <string name="botonEnviarEmail">Enviar Email para cotizar</string>
    <string name="precioAntes">Precio Antes:</string>
    <string name="txDescripcionn">Descripción:</string>
    <string name="ahora">Ahora:</string>
    <string name="medioPago">Medios de Pago:</string>
    <string name="preciover">Precio:</string>

</resources>