<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.FragmentDetalleFono">

    <ScrollView
        android:id="@+id/SCview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/CVdetalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgDetalleFono"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.193" />

                    <TextView
                        android:id="@+id/txDescripcion"
                        style="@style/DetalleStylo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="descripcion"
                        android:text="@string/descripcion"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txPrecioDetalle" />

                    <TextView
                        android:id="@+id/txPrecioFinal"
                        style="@style/DetalleStylo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="precio Final"
                        android:text="@string/precioFinall"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txDescripcion" />

                    <TextView
                        android:id="@+id/txCredito"
                        style="@style/DetalleStylo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="credito"
                        android:text="@string/credito"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txPrecioFinal" />

                    <TextView
                        android:id="@+id/txNombreDetalle"
                        style="@style/DetalleStylo"
                        android:text="@string/nombreDetalle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgDetalleFono"
                        tools:hint="nombre" />

                    <TextView
                        android:id="@+id/txPrecioDetalle"
                        style="@style/DetalleStylo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="precio"
                        android:text="@string/precioDetalle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txNombreDetalle" />

                    <Button
                        android:id="@+id/btnEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:hint="Lo quiero Enviar Email"
                        android:text="@string/BotonEnviarEmail"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>